<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--全局-->
    <string name="net_request_failure">请求失败</string>
    <string name="net_no_connect">网络未连接</string>

    <string name="app_name">Interview-IT</string>
    <string name="hello_world">Hello Android!</string>

    <!--总得字符串-->
    <string name="str_submit">提交</string>
    <string name="str_complete">完成</string>
    <string name="str_detail">详细</string>
    <string name="str_exit_app">快速点击两次退出程序</string>

    <!--home页用的字符-->
    <string name="home_menu_label">选择标签</string>
    <string name="home_menu_upload_problem_content">上传问题</string>
    <string name="home_menu_upload_experience_content">上传面经</string>
    <string name="home_menu_praise">我赞过的</string>
    <string name="home_menu_store">我的收藏</string>
    <string name="home_menu_setting">环境设置</string>
    <string name="home_menu_login_and_register">登录/注册</string>
    <string name="home_menu_no_login">您还未登录</string>
    <string name="home_home">首页</string>
    <string name="home_category">分类</string>
    <string name="home_experience">经历</string>
    <string name="home_technology">技巧</string>

    <!--home fragment-->
    <string name="homef_title_bar_newest">最新</string>
    <string name="homef_title_bar_hottest">最热</string>
    <!--skill fragment-->
    <string name="skill_title_bar_text">技巧</string>

    <!--skill list fragment-->

    <!--skill detail fragment-->
    <string name="skill_detail_title_bar_text">详细</string>

    <!--category fragment-->
    <string name="category_title_bar_text">分类</string>

    <!--problem fragment-->
    <string name="problem_title_bar_text">分类</string>

    <!--problem detail fragment-->
    <string name="problem_detail_praise">赞</string>
    <string name="problem_detail_collect">收藏</string>
    <string name="problem_detail_share">分享</string>

    <!--experience fragment-->
    <string name="experience_title_bar_txt">面试经历</string>

    <!--面试题上传页-->
    <string name="upload_problem_title_txt">上传面试题</string>
    <string name="upload_choose_category">选择类别</string>
    <string name="upload_choose_tag">选择标签</string>
    <string name="upload_problem_title">题目描述</string>
    <string name="upload_problem_answer">题目答案</string>

    <!--面试经历上页-->
    <string name="upload_experience_title_txt">上传面试经历</string>
    <string name="upload_experience_content">面试经验：</string>
    <string name="upload_experience_content_hint">面试经验</string>

    <!--我赞过的 页面-->
    <string name="praise_title_problem_txt">题目</string>
    <string name="praise_title_experience_txt">面经</string>

    <!--登录页 注册页 完成用户信息页-->
    <string name="login_login_submit">登录</string>
    <string name="login_register_submit">注册</string>
    <string name="login_username_check_failure">用户名由3-15位字母或数字或-或_组成</string>
    <string name="login_password_check_failure">用户名由6-15位字母或数字或-或_组成</string>
    <string name="login_success">登录成功</string>
    <string name="login_input_username">输入用户名/邮箱</string>
    <string name="login_input_password">输入密码</string>
    <string name="register_have_account">已有账号,去登录</string>
    <string name="register_input_username">输入用户名</string>
    <string name="register_input_mail">输入邮箱</string>
    <string name="register_mail_check_failure">邮箱格式错误</string>
    <string name="register_success">注册成功</string>
    <string name="complete_user_name">用户名</string>
    <string name="complete_user_nickname">昵称</string>
    <string name="complete_user_sex">性别</string>
    <string name="complete_user_introduce">简介</string>
    <string name="complete_user_school">学校</string>
    <string name="complete_user_company">公司</string>
    <string name="complete_click_user_nickname">点击设置昵称</string>
    <string name="complete_click_user_sex">点击设置性别</string>
    <string name="complete_click_user_introduce">点击设置简介</string>
    <string name="complete_click_user_school">点击设置学校</string>
    <string name="complete_click_user_company">点击设置公司</string>
    <string name="complete_title_txt">编辑个人资料</string>
    <string name="edit_field_hint_content">请不要超过200个字</string>
    <string name="edit_field_title_txt">编辑%1$s</string>

    <!--标签页-->
    <string name="label_save_success">保存成功</string>

    <!--设置页-->
    <string name="setting_title_txt">设置</string>
    <string name="setting_is_show_answer">默认显示答案</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_update_version">版本更新</string>
    <string name="setting_app_about">关于IT面试小助手</string>
    <string name="setting_close_app">退出应用</string>




</resources>
