<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <include layout="@layout/title_bar"></include>

    <!--内容-->
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="20dp"
              android:text="@string/upload_experience_content"/>

    <EditText android:id="@+id/upload_experience_content"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/upload_experience_content_hint"/>

    <Button android:id="@+id/upload_experience_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/str_submit"/>

</LinearLayout>