<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <include android:id="@+id/title_bar"
             layout="@layout/title_bar_with_save"></include>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/title_bar"
                  android:orientation="vertical"
                  android:paddingLeft="15dp"
                  android:layout_marginTop="20dp"
                  android:background="@color/white">
        <!--用户名-->
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:paddingTop="15dp"
                      android:paddingBottom="15dp"
                      android:orientation="horizontal"
                      android:gravity="center_vertical">
            <TextView android:layout_width="80dp"
                      android:layout_height="wrap_content"
                      android:textSize="15sp"
                      android:text="@string/complete_user_name"/>
            <TextView android:id="@+id/complete_user_name_tv"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textSize="15sp"/>
        </LinearLayout>

        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/default_background">
        </View>
        <!--昵称-->
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:paddingTop="15dp"
                      android:paddingBottom="15dp"
                      android:orientation="horizontal"
                      android:gravity="center_vertical">
            <TextView android:layout_width="80dp"
                      android:layout_height="wrap_content"
                      android:textSize="15sp"
                      android:text="@string/complete_user_nickname"/>
            <TextView android:id="@+id/complete_user_nickname_tv"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textSize="15sp"
                      android:hint="@string/complete_click_user_nickname"/>
        </LinearLayout>

        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/default_background"  >
        </View>
        <!--性别-->
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:paddingTop="15dp"
                      android:paddingBottom="15dp"
                      android:orientation="horizontal"
                      android:gravity="center_vertical">
            <TextView android:layout_width="80dp"
                      android:layout_height="wrap_content"
                      android:textSize="15sp"
                      android:text="@string/complete_user_sex"/>
            <TextView android:id="@+id/complete_user_gender_tv"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textSize="15sp"
                      android:hint="@string/complete_click_user_sex"/>
        </LinearLayout>

        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/default_background">
        </View>
        <!--简介-->
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:paddingTop="15dp"
                      android:paddingBottom="15dp"
                      android:orientation="horizontal"
                      android:gravity="center_vertical">
            <TextView android:layout_width="80dp"
                      android:layout_height="wrap_content"
                      android:textSize="15sp"
                      android:text="@string/complete_user_introduce"/>
            <TextView android:id="@+id/complete_user_introduce_tv"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textSize="15sp"
                      android:hint="@string/complete_click_user_introduce"/>
        </LinearLayout>

        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/default_background">
        </View>
        <!--学校-->
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:paddingTop="15dp"
                      android:paddingBottom="15dp"
                      android:orientation="horizontal"
                      android:gravity="center_vertical">
            <TextView android:layout_width="80dp"
                      android:layout_height="wrap_content"
                      android:textSize="15sp"
                      android:text="@string/complete_user_school"/>
            <TextView android:id="@+id/complete_user_school_tv"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textSize="15sp"
                      android:hint="@string/complete_click_user_school"/>
        </LinearLayout>

        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/default_background">
        </View>
        <!--公司-->
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:paddingTop="15dp"
                      android:paddingBottom="15dp"
                      android:orientation="horizontal"
                      android:gravity="center_vertical">
            <TextView android:layout_width="80dp"
                      android:layout_height="wrap_content"
                      android:textSize="15sp"
                      android:text="@string/complete_user_company"/>
            <TextView android:id="@+id/complete_user_company_tv"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textSize="15sp"
                      android:hint="@string/complete_click_user_company"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>