<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout android:id="@+id/problem_detail_title_bar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_bar_height"
                    android:background="@color/title_bar">

        <ImageView android:id="@+id/problem_detail_back_imgbtn"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignParentLeft="true"
                   android:layout_marginLeft="20dp"
                   android:src="@drawable/title_bar_back"/>

        <TextView android:id="@+id/problem_detail_title_content_txt"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
                  android:textColor="@android:color/white"
                  android:text="@string/skill_detail_title_bar_text"
                  android:textSize="20sp"/>
    </RelativeLayout>

    <RelativeLayout android:id="@+id/problem_detail_problem_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@+id/problem_detail_title_bar">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="题目"/>
    </RelativeLayout>

    <RelativeLayout android:id="@+id/problem_detail_answer_wrapper"
                    android:layout_below="@+id/problem_detail_problem_wrapper"
                    android:layout_marginBottom="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="答案"/>
    </RelativeLayout>

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_height="50dp">

        <Button android:id="@+id/problem_detail_praise_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:textSize="18sp"
                android:text="@string/problem_detail_praise"/>

        <Button android:id="@+id/problem_detail_collect_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="18sp"
                android:text="@string/problem_detail_collect"/>

        <Button android:id="@+id/problem_detail_share_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp"
                android:textSize="18sp"
                android:text="@string/problem_detail_share"/>

    </RelativeLayout>

</RelativeLayout>